distribution/kustomize/base/minio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /minio/
      route:
        - destination:
            host: minio-service.kubeflow.svc.cluster.local
            port:
              number: 9000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-external
  namespace: kubeflow
spec:
  gateways:
    - minio-ingressgateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: minio-service.kubeflow.svc.cluster.local
            port:
              number: 9000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: minio-ingressgateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - minio.k8s.tidu.giize.com
